fix(frontend): centralizes texts from the login screen

--- a/frontend/src/pages/Login/styles.css
+++ b/frontend/src/pages/Login/styles.css
@@ -20,6 +20,13 @@
 .logon-container section.form form h1 {
     font-size: 32px;
     margin-bottom: 32px;
+    display: flex;
+    justify-content: center;
+}
+
+.logon-container section.form form a{
+    display: flex;
+    justify-content: center;
 }
 .logon-container section.form input {
     margin-top: 8px;
