--- a/frontend/src/pages/Photo/styles.css
+++ b/frontend/src/pages/Photo/styles.css
@@ -20,7 +20,15 @@
 .photo-container section.form form h1 {
     font-size: 32px;
     margin-bottom: 32px;
+    display: flex;
+    justify-content: center;
 }
+
+.photo-container section.form form a{
+    display: flex;
+    justify-content: center;
+}
+
 .photo-container section.form  {
     margin-top: 8px;
 }
